[package]
name = "axum-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
hyper = { version = "0.14.26", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["json", "registry", "env-filter"] }
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.7"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
serde = { version = "1.0.164", features = ["derive"] }
serde-aux = "4.2.0"
uuid = { version = "1.3.4", features = ["v4"] }
tower = "0.4.13"
futures-core = "0.3.28"
futures-util = "0.3.28"
thiserror = "1.0.40"
color-eyre = "0.6.2"

